--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Prime Tester</title>
+    <meta name="description" content="Tests if a value in the input is prime">
+    <meta name="author" content="yxCarla">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source Code Pro" rel="stylesheet">
